--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ pyarrow==18.1.0
 pycares==4.8.0
 pycparser==2.22
 pydeck==0.9.1
+pydantic>=2.0
 PyJWT==2.10.1
 pymdown-extensions==10.15
 pyOpenSSL==25.1.0
