--- a/requirements.txt
+++ b/requirements.txt
@@ -209,7 +209,8 @@ pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.1
-PyJWT==2.3.0
+# PyJWT==2.3.0
+pyjwt>=2.8.0
 pylance==0.22.0
 pymdown-extensions==10.15
 pyOpenSSL==25.1.0
